--- a/style.css
+++ b/style.css
@@ -1,109 +1,197 @@
-
-.btn-primary{
-    border-radius: 5px;
-  background:#E55473;
+.btn-primary {
+  border-radius: 5px;
+  background: #e55473;
   border: 0;
   color: white;
   font-size: 20px;
   font-weight: 700;
   padding: 15px 35px;
 }
-.text-primary{
-    color:#E55473 ;
+.text-primary {
+  color: #e55473;
 }
 /* nav related style  */
-.header{
-    display: flex;
-    align-items: center;
-    background-color: #FCEEF1;
-    padding: 0px 0px 0px 150px;
+.header {
+  display: flex;
+  align-items: center;
+  background-color: #fceef1;
+  padding: 0px 0px 0px 150px;
 }
-.nav-title{
-    max-width: 900px;
-    margin-bottom: 40px;
+.nav-title {
+  max-width: 900px;
+  margin-bottom: 40px;
 }
-.header .profile-pic1{
-    max-width: 500px;
-    margin-left: 120px;
+.header .profile-pic1 {
+  max-width: 500px;
+  margin-left: 120px;
 }
-.nav-header{
-    font-size: 60px;
-    color: #474747;
-    margin-bottom: 20px
+.nav-header {
+  font-size: 60px;
+  color: #474747;
+  margin-bottom: 20px;
 }
-.nav-info{
-    color: #949292;
-    font-weight: 700;
-    margin-top: 5px;
-    margin-bottom: 30px;
+.nav-info {
+  color: #949292;
+  font-weight: 700;
+  margin-top: 5px;
+  margin-bottom: 30px;
 }
 /* feature section style  */
-.para-1{
-    text-align: center;
-    padding: 0px 600px;
+.para-1 {
+  text-align: center;
+  padding: 0px 600px;
 }
-.para-1-title{
-    font-size: 30px;
-    color: #474747;
-    margin-top: 100px;
+.para-1-title {
+  font-size: 30px;
+  color: #474747;
+  margin-top: 100px;
 }
-.para-1-description{
-    margin: 0 auto;
-    color: #949292;
+.para-1-description {
+  margin: 0 auto;
+  color: #949292;
 }
 /* img style  */
-/* .img{
-    margin-left: 500px;
+.img{
+    margin-left: 180px;
+    margin-top: 50px;
+    gap: 30px;
 }
-.img-1{
-    background-color: #CC5896;
-} */
 
 /* sign up section style  */
-.section1{
-    display: flex;
-    align-items: center;
-    height: 500px;
-    margin-top: 100px;
-    background-color: #ebd9dd;
+.section1 {
+  display: flex;
+  align-items: center;
+  height: 500px;
+  margin-top: 100px;
+  background-color: #ebd9dd;
 }
-.section{
-    padding: 0px 0px 0px 200px;
-    text-align: center;
-    width: 50%;
+.section {
+  padding: 0px 0px 0px 200px;
+  text-align: center;
+  width: 50%;
 }
-.section-title{
-    font-size: 40px;
-    
+.section-title {
+  font-size: 40px;
+  color: #474747;
 }
-.section-info{
-    color: #949292;
-    padding: 0px 200px;
+.section-info {
+  color: #949292;
+  padding: 0px 200px;
 }
 
-.section, .profile-pic2{
-    margin-left: 50px;
+.section,
+.profile-pic2 {
+  margin-left: 50px;
 }
 
 /* latest section design  */
-.section2{
-    margin:150px 200px;
-    text-align: center;
-    background: url("img/Rectangle 9.png");
-    height: 400px;
+.section2 {
+  margin: 150px 200px;
+  text-align: center;
+  background: url("img/Rectangle 9.png");
+  height: 449px;
+  width: 1440px;
 }
 /* .section-deal{
 
 } */
-.section-title1{
-    font-size: 40px;
-    color: #474747;
-    padding: 130px 0px 0px 0px;
+.section-title1 {
+  font-size: 40px;
+  color: #474747;
+  padding: 130px 0px 0px 0px;
 }
-.section-info1{
-    color: #949292;
+.section-info1 {
+  color: #949292;
+  font-size: 18px;
 }
-.contact input[type="email"]{
-padding: 18px 180px;
-border-radius: 5px;
+.contact input[type="email"] {
+  margin-top: 20px;
+  padding: 18px 250px;
+  border-radius: 10px;
+  border: 1px solid white;
+}
+/* skill section style  */
+.section4{
+  text-align: center;
+  margin-top: 100px;
+  margin-bottom: 100px;
+}
+.section-title4{
+font-size: 40px;
+color: #474747;
+}
+.section-description{
+padding: 0px 500px;
+margin-bottom: 50px;
+color: #757575;
+}
+
+.skills-container {
+  display: flex;
+  gap: 20px;
+}
+.skill-title{
+  font-size: 30px;
+}
+.skill1{
+  margin-left: 150px;
+}
+.skill {
+  
+  border-radius: 10px;
+  background: #fff;
+  box-shadow: 0 6px 50px 0 rgb(107, 102, 102);
+  width: 500px;
+}
+.skill-description {
+  color: #757575;
+  text-align: center;
+}
+/* section3 style  */
+.section3{
+  text-align: center;
+  margin-top: 125px;
+}
+.section3-title{
+  font-size: 40px;
+  color: #474747;
+}
+.section3-info{
+  font-size: 18px;
+  color: #949292;
+  padding: 0px 600px;
+  margin-bottom: 50px;
+}
+.img1,.pic4,.pic3,.pic2{
+  margin-left: 15px;
+}
+.pic4{
+  margin-left: 20px;
+}
+.pic1{
+  margin-left: 40px;
+}
+
+
+
+/* footer section style  */
+.footer {
+  max-height: 400px;
+  max-width: 1922px;
+  text-align: center;
+  background: #111010;
+  padding: 100px 0px;
+}
+.footer-title {
+  font-size: 48px;
+  color: #ffffff;
+}
+.footer-info {
+  font-size: 18px;
+  color: #ffffff;
+  padding: 0px 600px;
+}
+.footer-end {
+  font-size: 16px;
+  color: #dddbdb;
 }
