--- a/style.css
+++ b/style.css
@@ -15,9 +15,9 @@
   display: flex;
   align-items: center;
   background-color: #fceef1;
-  padding: 0px 0px 0px 150px;
+  padding: 0px 0px 0px 130px;
 }
-.nav-title{
+.nav-title {
   margin-bottom: 40px;
 }
 .header .profile-pic1 {
@@ -38,7 +38,6 @@
 /* feature section style  */
 .para-1 {
   text-align: center;
-  padding: 0px 300px;
 }
 .para-1-title {
   font-size: 30px;
@@ -48,12 +47,13 @@
 .para-1-description {
   color: #949292;
 }
-/* img style  */
-.img{
-    margin-left: 0px;
-    margin-top: 50px;
+.img {
+  margin-top: 50px;
 }
-
+.img0 {
+  width: 1100px;
+  margin-left: 100px;
+}
 /* sign up section style  */
 .section1 {
   display: flex;
@@ -108,72 +108,74 @@
   border: 1px solid white;
 }
 /* skill section style  */
-.section4{
+.section4 {
   text-align: center;
   margin-top: 100px;
   margin-bottom: 100px;
 }
-.section-title4{
-font-size: 40px;
-color: #474747;
+.section-title4 {
+  font-size: 40px;
+  color: #474747;
 }
-.section-description{
-padding: 0px 200px;
-margin-bottom: 50px;
-color: #757575;
+.section-description {
+  padding: 0px 200px;
+  margin-bottom: 50px;
+  color: #757575;
 }
 
 .skills-container {
   display: flex;
-  gap: 20px;
+  gap: 10px;
+  margin-left: 90px;
 }
-.skill-title{
+.skill-title {
   font-size: 30px;
 }
-.skill1{
-  margin-left: 150px;
-}
+
 .skill {
-  
+  align-items: center;
+  margin-left: 20px;
   border-radius: 10px;
   background: #fff;
   box-shadow: 0 6px 50px 0 rgb(107, 102, 102);
-  width: 500px;
+  width: 350px;
+  height: 420px;
+}
+.img11,
+.img12,
+.img13 {
+  width: 300px;
 }
 .skill-description {
   color: #757575;
   text-align: center;
 }
 /* section3 style  */
-.section3{
+.section3 {
   text-align: center;
-  align-items: center;
   margin-top: 125px;
 }
-.section3-title{
+.section3-title {
   font-size: 40px;
   color: #474747;
 }
-.section3-info{
+.section3-info {
   font-size: 18px;
   color: #949292;
   padding: 0px 300px;
   margin-bottom: 50px;
 }
-.img1,.pic4,.pic3,.pic2{
-  margin-left: 10px;
+.img1 {
   display: flex;
-  /* text-align: center;
-  align-items: center; */
+  margin-left: 120px;
 }
-.pic4{
+.pic1,
+.pic4,
+.pic3,
+.pic2 {
+  width: 240px;
   margin-left: 20px;
 }
-/* .pic1{
-  margin-left: px;
-} */
-
-
 
 /* footer section style  */
 .footer {
